k8s/gateway/cross-namespace-services.yaml
---
# ExternalName service that proxies /ui to conjur-ui in the conjur namespace.
apiVersion: v1
kind: Service
metadata:
  name: conjur-ui-proxy
  namespace: securetask
spec:
  type: ExternalName
  externalName: conjur-ui.conjur.svc.cluster.local
  ports:
    - port: 80

---
# ExternalName service that proxies /monitoring to Grafana in monitoring namespace.
apiVersion: v1
kind: Service
metadata:
  name: grafana-proxy
  namespace: securetask
spec:
  type: ExternalName
  externalName: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
  ports:
    - port: 80
