k8s/gateway/ingress-conjur.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ui
  namespace: conjur
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ui(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: conjur-ui
                port:
                  number: 80
